--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write .",
+    "format:check": "prettier --list-different .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
@@ -14,6 +16,7 @@
   "dependencies": {
     "cli-color": "^2.0.2",
     "commander": "^9.1.0",
-    "fs-extra": "^10.0.1"
+    "fs-extra": "^10.0.1",
+    "prettier": "^2.6.2"
   }
 }
